# ai-dataset-generator

./: .gitignore  CONTRIBUTING.md  Improvements.md  LICENSE  README.md  SECURITY.md  SKILL.md  install.ps1  install.sh  install.sh.sha256  plan.md  pyproject.toml  requirements.txt  tasks.md
.agent/skills/dataset-generator/: SKILL.md
.agent/skills/dataset-generator/scripts/: augment.py  collect.py  dedup.py  export.py  generate.py  verify.py
.agent/skills/dataset-generator/scripts/utils/: canonical.py
.agent/skills/dataset-generator/sub-skills/: data-card.md  data-verifier.md  dataset-strategy.md  deduplicator.md  diversity-engine.md  formatter-exporter.md  llm-judge.md  seed-generator.md
.github/workflows/: ci.yml
Plan/: plan.md
docs/: architecture.md  tasks.md  workflows.md
resources/references/: llm-audit-rubric.md
scripts/: augment.py  build_loop.py  coverage.py  export.py  generate.py  ingest.py  verify.py
scripts/utils/: canonical.py  db.py  schema.py  security.py  web.py
scripts/utils/parsers/: c_family.py  html.py
sub-skills/: data-verifier.md  dataset-auditor.md  dataset-strategy.md  diversity-engine.md  formatter-exporter.md  llm-judge.md  local-collector.md  quality-filter.md  seed-generator.md
tests/: pipeline_ingest_collect.py  test_pipeline.py
