[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dataset-skill"
version = "0.1.0"
description = "Tool-native dataset generation skill for Codex, Claude Code, and Antigravity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Bhanu Namikaze" }
]
dependencies = [
  "jsonschema>=4.26,<5"
]
keywords = [
  "agentic",
  "dataset-generation",
  "fine-tuning",
  "sft",
  "dpo",
  "codex",
  "claude-code",
  "antigravity"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.setuptools]
include-package-data = false
